--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 const api = {
     key: " f039fca97d04493bb0c03512221803",
-    base : "http://api.weatherapi.com/v1/current.json?key="
+    base : "https://api.weatherapi.com/v1/current.json?key="
    
 }
 const city = document.getElementById('city')
